--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,10 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<mybatisplus.version>2.1.4</mybatisplus.version>
 	</properties>
+	
+
 
 	<dependencies>
 		<dependency>
@@ -56,8 +59,48 @@
 		    <artifactId>poi-tl</artifactId>
 		    <version>0.0.3</version>
 		</dependency>
-        
 		
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        
+        <!-- Spring-Mybatis -->
+
+		<dependency>
+		
+		     <groupId>org.mybatis.spring.boot</groupId>
+		
+		     <artifactId>mybatis-spring-boot-starter</artifactId>
+		
+		    <version>1.3.0</version>
+		
+		 </dependency>
+		 
+		
+		<!-- MySQL -->
+		
+		<dependency>
+		
+		    <groupId>mysql</groupId>
+		
+		    <artifactId>mysql-connector-java</artifactId>
+		
+		</dependency>
+        
+		<!-- data source -->
+		<dependency>
+		    <groupId>com.alibaba</groupId>
+		    <artifactId>druid</artifactId>
+		    <version>1.1.6</version>
+		</dependency>
+		<!-- MyBatis Plus依赖 -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus</artifactId>
+            <version>${mybatisplus.version}</version>
+        </dependency>
+
  		
 		
 	 		
