--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,54 +6,65 @@ server.port=8080
 ## 设置彩色输出日志
 #spring.output.ansi.enabled=DETECT
 
-## 数据库配置
-## 数据源
-spring.datasource.type = com.alibaba.druid.pool.DruidDataSource
-## 数据库连接
-spring.datasource.url=jdbc:mysql://localhost:3306/testdb?useUnicode=true&characterEncoding=utf8
-## 数据库用户名
-spring.datasource.username=root
-## 数据库连接密码
-spring.datasource.password=123456
-## 数据库连接驱动
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-## 配置监控统计拦截filters
-spring.datasource.filters = stat
-## 连接池最大使用连接数
-spring.datasource.maxActive = 20
-## 初始化连接大小
-spring.datasource.initialSize = 3
-## 获取连接最大等待时间
-spring.datasource.maxWait = 60000
-## 连接池最小空闲
-spring.datasource.minIdle = 1
-## 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
-spring.datasource.timeBetweenEvictionRunsMillis = 60000
-## 配置一个连接在池中最小生存的时间，单位是毫秒
-spring.datasource.minEvictableIdleTimeMillis = 300000
-spring.datasource.validationQuery = select 'x'
-spring.datasource.testWhileIdle = true
-spring.datasource.testOnBorrow = false
-spring.datasource.testOnReturn = false
-spring.datasource.poolPreparedStatements = true
-spring.datasource.maxOpenPreparedStatements = 20
+# 数据库访问配置
 
-## Redis 配置
-## Redis数据库索引（默认为0）
-#spring.redis.database=0
-## Redis服务器地址
-#spring.redis.host=127.0.0.1
-## Redis服务器连接端口
-#spring.redis.port=6379
-## Redis服务器连接密码（默认为空）
-#spring.redis.password=
-## 连接池最大连接数（使用负值表示没有限制）
-#spring.redis.pool.max-active=8
-## 连接池最大阻塞等待时间（使用负值表示没有限制）
-#spring.redis.pool.max-wait=-1
-## 连接池中的最大空闲连接
-spring.redis.pool.max-idle=8
-## 连接池中的最小空闲连接
-spring.redis.pool.min-idle=0
-## 连接超时时间（毫秒）
-spring.redis.timeout=0
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+
+#mysql配置
+
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/spring-boot?#useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull&useSSL=false
+
+#spring.datasource.username=root
+
+#spring.datasource.password=admin
+
+#oracle配置
+
+spring.jpa.database=oracle
+
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+
+spring.datasource.username=root
+
+spring.datasource.password=admin
+
+# 下面为连接池的补充设置，应用到上面所有数据源中
+
+spring.datasource.initialSize=5
+
+spring.datasource.minIdle=5
+
+spring.datasource.maxActive=20
+
+# 配置获取连接等待超时的时间
+
+spring.datasource.maxWait=60000
+
+# 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+
+# 配置一个连接在池中最小生存的时间，单位是毫秒
+
+spring.datasource.minEvictableIdleTimeMillis=300000
+
+spring.datasource.validationQuery=SELECT 1 FROM DUAL
+
+spring.datasource.testWhileIdle=true
+
+spring.datasource.testOnBorrow=false
+
+spring.datasource.testOnReturn=false
+
+# 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
+
+spring.datasource.filters=stat,wall,log4j
+
+spring.datasource.logSlowSql=true
+
+mybatis.mapper-locations: classpath:mapper/*.xml  #注意：一定要对应mapper映射xml文件的所在路径
+
