--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,25 +12,25 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 #mysql配置
 
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/spring-boot?#useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull&useSSL=false
-
-#spring.datasource.username=root
-
-#spring.datasource.password=admin
-
-#oracle配置
-
-spring.jpa.database=oracle
-
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb?#useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull&useSSL=false
 
 spring.datasource.username=root
 
-spring.datasource.password=admin
+spring.datasource.password=123456
+
+#oracle配置
+
+#spring.jpa.database=oracle
+#
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+#
+#spring.datasource.username=root
+#
+#spring.datasource.password=admin
 
 # 下面为连接池的补充设置，应用到上面所有数据源中
 
@@ -66,5 +66,5 @@ spring.datasource.filters=stat,wall,log4j
 
 spring.datasource.logSlowSql=true
 
-mybatis.mapper-locations: classpath:mapper/*.xml  #注意：一定要对应mapper映射xml文件的所在路径
+mybatis.mapper-locations=classpath:/mapper/*.xml
 
